changes according to review 2